html version of message

--- a/config
+++ b/config
@@ -1,5 +1,5 @@
 xlsx_path F:\Pobrane\charzoApkaLista.xlsx
-content_file content.txt
+content_file content.html
 
 sender_address charzu@vivaldi.net
 sentbox_name Sent
